--- a/index.html
+++ b/index.html
@@ -150,23 +150,23 @@
                 <div id="sfw-gallery" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-6">
                     <!-- ... 5 SFW items ... -->
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https://placehold.co/600x600/E94560/FFFFFF?text=SFW+Art+1" alt="SFW Artwork 1" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="1-Alternative-Outfit.jpg" alt="Alternative Outfit" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https://placehold.co/600x600/E94560/FFFFFF?text=SFW+Art+2" alt="SFW Artwork 2" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="2-DND-character.jpg" alt="DND character" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https://placehold.co/600x600/E94560/FFFFFF?text=SFW+Art+3" alt="SFW Artwork 3" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="1-Dnd-character-2.jpg" alt="Dnd character 2" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https://placehold.co/600x600/E94560/FFFFFF?text=SFW+Art+4" alt="SFW Artwork 4" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="3-ela-grzmot.jpg" alt="Ela Grzmot" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https://placehold.co/600x600/E94560/FFFFFF?text=SFW+Art+5" alt="SFW Artwork 5" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="last-judgement.jpg" alt="Last Judgement" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                 </div>
