--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            /* New "Clean Dark" Palette */
+            /* "Clean Dark" Palette */
             --bg-dark: #0a0a0a;         /* Near black */
             --bg-card: #1a1a1a;         /* Dark grey */
             --accent-primary: #ffffff;  /* Pure white */
@@ -134,7 +134,7 @@
                     <h2 class="font-heading text-5xl font-extrabold text-white">💼 Portfolio</h2>
                     <p class="text-xl text-text-dark mt-6 max-w-3xl mx-auto">
                         Here’s a mix of my work. My goal is to get better with every piece.
-                    </V>
+                    </p>
                     <div class="mt-8 text-yellow-400 border border-yellow-700 bg-yellow-900/50 px-4 py-3 rounded-lg inline-block">
                         <p>NSFW section below contains adult themes — viewer discretion advised.</p>
                     </div>
@@ -147,22 +147,22 @@
                 </div>
                 
                 <!-- SFW Gallery Grid (5 slots) -->
+                <!-- UPDATED with your correct, lowercase filenames -->
                 <div id="sfw-gallery" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-6">
-                    <!-- ... 5 SFW items ... -->
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="1-Alternative-Outfit.jpg" alt="Alternative Outfit" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="alternative-outfit.jpg" alt="Alternative Outfit" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="2-DND-character.jpg" alt="DND character" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="dnd-character.jpg" alt="DND character" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="1-Dnd-character-2.jpg" alt="Dnd character 2" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="dnd-character-2.jpg" alt="Dnd character 2" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="3-ela-grzmot.jpg" alt="Ela Grzmot" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="ela-grzmot.jpg" alt="Ela Grzmot" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
@@ -172,26 +172,26 @@
                 </div>
                 
                 <!-- NSFW Gallery Grid (5 slots) -->
+                <!-- We will use the ImgBB/Postimages method for these -->
                 <div id="nsfw-gallery" class="hidden grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-6">
-                    <!-- ... 5 NSFW items ... -->
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
                         <img src="https://i.ibb.co/238gBk1x/alexandria-jpg.jpg" alt="NSFW Artwork (Alexandria)" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https://placehold.co/600x600/00A8CC/FFFFFF?text=NSFW+Art+2" alt="NSFW Artwork 2" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="https://placehold.co/600x600/999999/0a0a0a?text=NSFW+Art+2" alt="NSFW Artwork 2" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https://placehold.co/600x600/00A8CC/FFFFFF?text=NSFW+Art+3" alt="NSFW Artwork 3" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="https://placehold.co/600x600/999999/0a0a0a?text=NSFW+Art+3" alt="NSFW Artwork 3" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https." alt="NSFW Artwork 4" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="https://placehold.co/600x600/999999/0a0a0a?text=NSFW+Art+4" alt="NSFW Artwork 4" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                     <div class="gallery-item group relative aspect-square overflow-hidden rounded-lg cursor-pointer card-item p-1">
-                        <img src="https://placehold.co/600x600/00A8CC/FFFFFF?text=NSFW+Art+5" alt="NSFW Artwork 5" class="w-full h-full object-cover rounded-md transition-transform duration-300">
+                        <img src="https://placehold.co/600x600/999999/0a0a0a?text=NSFW+Art+5" alt="NSFW Artwork 5" class="w-full h-full object-cover rounded-md transition-transform duration-300">
                         <div class="gallery-overlay absolute inset-0 bg-black/70 flex items-center justify-center"><p class="text-white text-lg font-bold">Click to View</p></div>
                     </div>
                 </div>
@@ -341,63 +341,5 @@
             }
 
             const closeLightbox = () => {
-                lightbox.style.display = 'none';
-                lightboxImage.src = '';
-                document.body.style.overflow = 'auto';
-            };
+                lightbox.style.display =.
 
-            lightboxClose.addEventListener('click', closeLightbox);
-            lightbox.addEventListener('click', (e) => {
-                if (e.target === lightbox) closeLightbox();
-            });
-            document.addEventListener('keydown', (e) => {
-                if (e.key === 'Escape' && lightbox.style.display === 'flex') {
-                    closeLightbox();
-                }
-            });
-
-            // Scroll animation functionality
-            const animatedElements = document.querySelectorAll('[data-animate]');
-            const observer = new IntersectionObserver((entries) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersectDacting) {
-                        entry.target.classList.add('is-visible');
-                        observer.unobserve(entry.target);
-                    }
-                });
-            }, {
-                threshold: 0.1
-            });
-
-            animatedElements.forEach(el => {
-                observer.observe(el);
-            });
-
-            // Gallery Tab functionality
-            const sfwTab = document.getElementById('sfw-tab');
-            const nsfwTab = document.getElementById('nsfw-tab');
-            const sfwGallery = document.getElementById('sfw-gallery');
-            const nsfwGallery = document.getElementById('nsfw-gallery');
-
-            sfwTab.addEventListener('click', () => {
-                sfwTab.classList.add('active-tab');
-                nsfwTab.classList.remove('active-tab');
-                sfwGallery.classList.remove('hidden');
-                nsfwGallery.classList.add('hidden');
-                setupLightboxListeners();
-            });
-
-            nsfwTab.addEventListener('click', () => {
-                nsfwTab.classList.add('active-tab');
-                sfwTab.classList.remove('active-tab');
-                nsfwGallery.classList.remove('hidden');
-                sfwGallery.classList.add('hidden');
-                setupLightboxListeners();
-            });
-
-            // Initial setup for lightbox
-            setupLightboxListeners();
-        });
-    </script>
-</body>
-</html>
