--- a/index.html
+++ b/index.html
@@ -71,17 +71,6 @@
             display: none; /* Hidden by default */
         }
 
-        /* Scroll Animation styles */
-        .fade-in-up {
-            opacity: 0;
-            transform: translateY(30px);
-            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-        }
-        .fade-in-up.is-visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        
         /* Gallery Tab styles */
         .gallery-tab {
             @apply font-semibold text-lg py-2 px-6 rounded-full cursor-pointer transition-colors duration-300;
@@ -113,7 +102,7 @@
     <main>
         <!-- ABOUT SECTION -->
         <section id="about" class="max-w-4xl mx-auto px-6 py-20 sm:py-24">
-            <div class="text-center fade-in-up" data-animate>
+            <div class="text-center">
                 <h2 class="font-heading text-4xl mb-6 text-white">Hey, I’m AquaWrath.</h2>
                 <p class="text-xl text-[var(--text-light)] leading-relaxed max-w-3xl mx-auto">
                     I make anime-style illustrations that focus on expression, mood, and energy. I like drawing characters that feel alive — whether it’s fanart or a custom piece.
@@ -129,7 +118,7 @@
 
         <!-- GALLERY SECTION (Portfolio) -->
         <section id="gallery" class="max-w-5xl mx-auto px-6 py-20 sm:py-24">
-            <div class="fade-in-up" data-animate>
+            <div>
                 <div class="text-center mb-12">
                     <h2 class="font-heading text-5xl font-extrabold text-white">💼 Portfolio</h2>
                     <p class="text-xl text-text-dark mt-6 max-w-3xl mx-auto">
@@ -200,7 +189,7 @@
 
         <!-- COMMISSION INFO SECTION -->
         <section id="commissions" class="max-w-5xl mx-auto px-6 py-20 sm:py-24">
-            <div class="fade-in-up" data-animate>
+            <div>
                 <div class="text-center mb-16">
                     <h2 class="font-heading text-5xl font-extrabold text-white">💰 Commission Prices</h2>
                     <p class="text-lg text-text-dark mt-4">SFW & NSFW work accepted.</p>
@@ -253,7 +242,7 @@
 
         <!-- TERMS SECTION -->
         <section id="terms" class="max-w-5xl mx-auto px-6 py-20 sm:py-24">
-             <div class="fade-in-up" data-animate>
+             <div>
                 <div class="text-center mb-16">
                     <h2 class="font-heading text-5xl font-extrabold text-white">🧾 Terms</h2>
                 </div>
@@ -271,7 +260,7 @@
 
         <!-- CONTACT SECTION -->
         <section id="contact" class="max-w-5xl mx-auto px-6 py-20 sm:py-24">
-            <div class="text-center fade-in-up" data-animate>
+            <div class="text-center">
                  <h2 class="font-heading text-5xl font-extrabold mb-4 text-white">📬 Contact</h2>
                  <p class="text-xl text-text-dark mb-10 max-w-2xl mx-auto">Let’s work together. DMs are open on:</p>
                  <div class="flex flex-wrap justify-center gap-5">
@@ -356,23 +345,6 @@
                 }
             });
 
-            // Scroll animation functionality
-            const animatedElements = document.querySelectorAll('[data-animate]');
-            const observer = new IntersectionObserver((entries) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        entry.target.classList.add('is-visible');
-                        observer.unobserve(entry.target);
-                    }
-                });
-            }, {
-                threshold: 0.1
-            });
-
-            animatedElements.forEach(el => {
-                observer.observe(el);
-            });
-
             // Gallery Tab functionality
             const sfwTab = document.getElementById('sfw-tab');
             const nsfwTab = document.getElementById('nsfw-tab');
@@ -401,4 +373,3 @@
     </script>
 </body>
 </html>
-
